--- a/translations/game.en.xlf
+++ b/translations/game.en.xlf
@@ -8234,7 +8234,7 @@ No idea! The body has disappeared without trace...They must be rotting somewhere
       </notes>
       <segment>
         <source>Keine Todesopfer heute Abend. Alles ist in Ordnung. Ich garantiere Euch jedoch nur, dass die Zombies heute Nacht verhungern werden: Unsere morgigen Chancen sind..., naja, sagen wir, verbesserungswürdig.</source>
-        <target>Keine Todesopfer heute Abend. Alles ist in Ordnung. Ich garantiere Euch jedoch nur, dass die Zombies heute Nacht verhungern werden: Unsere morgigen Chancen sind..., naja, sagen wir, verbesserungswürdig.</target>
+        <target>No deaths tonight. However, I guarantee you the zombies will be starving tonight: I don't fancy our chances...</target>
       </segment>
     </unit>
     <unit id="t._G1SL" name="e5253d8">
