--- a/translations/game.fr.xlf
+++ b/translations/game.fr.xlf
@@ -18196,7 +18196,7 @@
       </notes>
       <segment>
         <source>Mindestens ein Bürger in deiner Eskorte kann dir nicht folgen. Du musst die Situation in den Griff bekommen... oder die Schwachen zurücklassen.</source>
-        <target>Mindestens ein Bürger in deiner Eskorte kann dir nicht folgen. Du musst die Situation in den Griff bekommen... oder die Schwachen zurücklassen.</target>
+        <target>Un ou plusieurs citoyens dans l'escorte ne peuvent vous suivre. Il faut vérifier la situation... ou abandonner les faibles.</target>
       </segment>
     </unit>
     <unit id="RqmtAaX" name="8621e33">
