Fix drunk message

--- a/translations/game.de.xlf
+++ b/translations/game.de.xlf
@@ -8695,13 +8695,13 @@
         <target>Deine Verletzung am Auge macht dir die Suche nicht gerade leichter.</target>
       </segment>
     </unit>
-    <unit id="gk3I32J" name="Deine Trunkenheit macht dir die Suche nicht gerade leichter.">
+    <unit id="gk3I32J" name="Dein &lt;strong&gt;Trunkenheitszustand&lt;/strong&gt; hilft dir wirklich night weiter. Das ist night gerade einfach, wenn sich alles dreht und du nicht mehr klar siehst.">
       <notes>
-        <note category="german">Deine Trunkenheit macht dir die Suche nicht gerade leichter.</note>
+        <note category="german">Dein &lt;strong&gt;Trunkenheitszustand&lt;/strong&gt; hilft dir wirklich night weiter. Das ist night gerade einfach, wenn sich alles dreht und du nicht mehr klar siehst.</note>
       </notes>
       <segment>
-        <source>Deine Trunkenheit macht dir die Suche nicht gerade leichter.</source>
-        <target>Deine Trunkenheit macht dir die Suche nicht gerade leichter.</target>
+        <source>Dein &lt;strong&gt;Trunkenheitszustand&lt;/strong&gt; hilft dir wirklich night weiter. Das ist night gerade einfach, wenn sich alles dreht und du nicht mehr klar siehst.</source>
+        <target><![CDATA[Dein <strong>Trunkenheitszustand</strong> hilft dir wirklich night weiter. Das ist night gerade einfach, wenn sich alles dreht und du nicht mehr klar siehst.]]></target>
       </segment>
     </unit>
     <unit id="UhCUwjo" name="Du kannst heute keine weiteren Beschwerden vorbringen.">
