--- a/translations/game.en.xlf
+++ b/translations/game.en.xlf
@@ -8678,13 +8678,13 @@ No idea! The body has disappeared without trace...They must be rotting somewhere
         <target>Your eye injury doesn't exactly make your search easier.</target>
       </segment>
     </unit>
-    <unit id="gk3I32J" name="Deine Trunkenheit macht dir die Suche nicht gerade leichter.">
+    <unit id="gk3I32J" name="Dein &lt;strong&gt;Trunkenheitszustand&lt;/strong&gt; hilft dir wirklich night weiter. Das ist night gerade einfach, wenn sich alles dreht und du nicht mehr klar siehst.">
       <notes>
-        <note category="german">Deine Trunkenheit macht dir die Suche nicht gerade leichter.</note>
+        <note category="german">Dein &lt;strong&gt;Trunkenheitszustand&lt;/strong&gt; hilft dir wirklich night weiter. Das ist night gerade einfach, wenn sich alles dreht und du nicht mehr klar siehst.</note>
       </notes>
       <segment>
-        <source>Deine Trunkenheit macht dir die Suche nicht gerade leichter.</source>
-        <target>Your sobriety, or lack thereof, is quite inconvenient. Things become pretty tricky pretty quickly when you're completely wasted...</target>
+        <source>Dein &lt;strong&gt;Trunkenheitszustand&lt;/strong&gt; hilft dir wirklich night weiter. Das ist night gerade einfach, wenn sich alles dreht und du nicht mehr klar siehst.</source>
+        <target><![CDATA[Your <strong>sobriety, or lack thereof,</strong> is quite inconvenient. Things become pretty tricky pretty quickly when you're completely wasted...]]></target>
       </segment>
     </unit>
     <unit id="UhCUwjo" name="Du kannst heute keine weiteren Beschwerden vorbringen.">
