--- a/translations/game.de.xlf
+++ b/translations/game.de.xlf
@@ -6898,7 +6898,7 @@
       </notes>
       <segment>
         <source>Du hast heute bereits getrunken. Eine weitere Essensration erlaubt dir heute nicht weitere AP.</source>
-        <target>Du hast heute bereits getrunken. Eine weitere Essensration erlaubt dir heute nicht weitere AP.</target>
+        <target>Du hast heute bereits getrunken. Eine weitere Ration Wasser erlaubt dir heute nicht weitere AP.</target>
       </segment>
     </unit>
     <unit id="9hu_P2F" name="f13ed10">
