--- a/translations/game.en.xlf
+++ b/translations/game.en.xlf
@@ -8297,7 +8297,7 @@ No idea! The body has disappeared without trace...They must be rotting somewhere
       </notes>
       <segment>
         <source>Wir verabschiedeten uns liebevoll von dem alten Hund, der im Dorf lebte... Das unaufhörliche Bellen, das alle in der Nachbarschaft verärgerte, ist seit dem Angriff von gestern Abend für immer verstummt. Das arme Ding... Die gute Nachricht ist, dass es in der Stadt keine nennenswerten Verluste an Menschenleben gab.</source>
-        <target>Wir verabschiedeten uns liebevoll von dem alten Hund, der im Dorf lebte... Das unaufhörliche Bellen, das alle in der Nachbarschaft verärgerte, ist seit dem Angriff von gestern Abend für immer verstummt. Das arme Ding... Die gute Nachricht ist, dass es in der Stadt keine nennenswerten Verluste an Menschenleben gab.</target>
+        <target>We bid a fond farewell to Bernard, the old dog that lived in the village... Bernard's incessant barking which annoyed everyone in the neighbourhood stopped for good as of last night's attack. Poor thing... The good news is that there was no loss of human life in the town to speak of.</target>
       </segment>
     </unit>
     <unit id="8lLyo5W" name="78078af">
