--- a/translations/soul.fr.xlf
+++ b/translations/soul.fr.xlf
@@ -2330,5 +2330,68 @@
         <target>Mort en ville</target>
       </segment>
     </unit>
+    <unit id="4KXz4lN" name="ALLE SAISONS">
+      <notes>
+        <note category="german">ALLE SAISONS</note>
+      </notes>
+      <segment>
+        <source>ALLE SAISONS</source>
+        <target>LES SAISONS</target>
+      </segment>
+    </unit>
+    <unit id="9cNHWGl" name="Seelenpunkte">
+      <notes>
+        <note category="german">Seelenpunkte</note>
+      </notes>
+      <segment>
+        <source>Seelenpunkte</source>
+        <target>Points d'âme</target>
+      </segment>
+    </unit>
+    <unit id="9DAxndj" name="Spieler">
+      <notes>
+        <note category="german">Spieler</note>
+      </notes>
+      <segment>
+        <source>Spieler</source>
+        <target>Joueur</target>
+      </segment>
+    </unit>
+    <unit id="bElrYkF" name="Entfernte Regionen">
+      <notes>
+        <note category="german">Entfernte Regionen</note>
+      </notes>
+      <segment>
+        <source>Entfernte Regionen</source>
+        <target>Villes Normales</target>
+      </segment>
+    </unit>
+    <unit id="7H7gGH1" name="Pandämonium">
+      <notes>
+        <note category="german">Pandämonium</note>
+      </notes>
+      <segment>
+        <source>Pandämonium</source>
+        <target>Villes du Pandémonium</target>
+      </segment>
+    </unit>
+    <unit id="MJMhV5L" name="Kleine Stadt">
+      <notes>
+        <note category="german">Kleine Stadt</note>
+      </notes>
+      <segment>
+        <source>Kleine Stadt</source>
+        <target>Petites Villes</target>
+      </segment>
+    </unit>
+    <unit id="2ZxNAfn" name="Private Stadt">
+      <notes>
+        <note category="german">Private Stadt</note>
+      </notes>
+      <segment>
+        <source>Private Stadt</source>
+        <target>Villes Privées</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
