add seasons dropdown (not functionnal)

--- a/translations/game.fr.xlf
+++ b/translations/game.fr.xlf
@@ -8362,7 +8362,7 @@
         <target>Votre blessure à l'œil vous gêne énormément lors de vos fouilles.</target>
       </segment>
     </unit>
-    <unit id="gk3I32J" name="Dein &lt;strong&gt;Trunkenheitszustand&lt;/strong&gt; hilft dir wirklich night weiter. Das ist night gerade einfach, wenn sich alles dreht und du nicht mehr klar siehst.">
+    <unit id="yvgmhoy" name="3439ccb">
       <notes>
         <note category="german">Dein &lt;strong&gt;Trunkenheitszustand&lt;/strong&gt; hilft dir wirklich night weiter. Das ist night gerade einfach, wenn sich alles dreht und du nicht mehr klar siehst.</note>
       </notes>
