--- a/translations/items.fr.xlf
+++ b/translations/items.fr.xlf
@@ -7873,7 +7873,7 @@
       </notes>
       <segment>
         <source>Dir ist schwindelig und du würdest dich am liebsten übergeben... Egal was, Hauptsache &lt;strong&gt;du bekommst wieder einen klaren Kopf&lt;/strong&gt;.</source>
-        <target><![CDATA[Dir ist schwindelig und du würdest dich am liebsten übergeben... Egal was, Hauptsache <strong>du bekommst wieder einen klaren Kopf</strong>.]]></target>
+        <target><![CDATA[Vous avez la tête qui tourne, limite envie de vomir, mais au moins <strong>ça vous a reveillé</strong>. Il ne vous reste plus qu'à courir...]]></target>
       </segment>
     </unit>
     <unit id="9P67IDx" name="827d979">
