--- a/translations/game.fr.xlf
+++ b/translations/game.fr.xlf
@@ -10483,7 +10483,7 @@
       </notes>
       <segment>
         <source>Verbesserung des Tages (building)</source>
-        <target>Votes</target>
+        <target>Projet</target>
       </segment>
     </unit>
     <unit id="AKS0zA3" name="Werkstatt (building)">
